Fix: Issue with navigation rendering on mobile screen
 - Remove padding from navigation menu and use flex instead to create spaces on navigation items

--- a/css/index.css
+++ b/css/index.css
@@ -203,9 +203,6 @@ p {
   .navigation-section .navigation {
     width: 100%;
   }
-  .navigation-section .navigation nav {
-    justify-content: space-evenly;
-  }
 }
 footer {
   color: #22283B;
