--- a/less/navigation.less
+++ b/less/navigation.less
@@ -48,10 +48,6 @@
   @media @mobile {
     .navigation {
       width: 100%;
-
-      nav {
-          justify-content: space-evenly;
-      }
     }
   }
 }
